--- a/Páginas/calendario.html
+++ b/Páginas/calendario.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hodiesea</title>
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../Imágenes/icono-1.png" type="image/png" sizes="x-icon">
     <link rel="stylesheet" href="../css/estilo.css">
 
@@ -21,6 +22,7 @@
                     <li class="navegador"><a href="../Páginas/calendario.html">Calendario</a></li>
                     <li class="navegador"><a href="../Páginas/plataforma.html">Plataforma</a></li>
                     <li class="navegador"><a href="../Páginas/nosotros.html">Nosotros</a></li>
+                    <li class="navegador"><a href="../Páginas/programas.html">Programas</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,7 +34,9 @@
     </section>
 
     <section class="calendarioC">
-    <img src="../Imágenes/Calendario.png" alt="">
+    <img src="../Imágenes/Calendario.png" alt="" data-aos="flip-left"
+    data-aos-easing="ease-out-cubic"
+    data-aos-duration="2000">
     </section>
 
     <section class="calendarioB">
@@ -42,35 +46,41 @@
     <section class="calendarioD">
         <P>Promociones</P>
     </section>
+    
 
-    <section class="contacto">
+    <div class="contacto">
         <div class="conectate">
             <h3>Conéctate, faltas tú</h3>
             <img class="qr" src="../Imágenes/QR.png" alt="">
         </div>
-        <div class="datoscontacto" >
+        <div class="redes">
+            <a href="https://www.facebook.com/profile.php?id=100082997299240">Facebook<img class="fb"
+                    src="../Imágenes/Facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/hodiesea/">Instagram<img class="ig"
+                    src="../Imágenes/Instagram.png" alt=""></a>
+        </div>
+        <div class="datoscontacto">
             <form>
-                <label class="datosform" for="nombre" >Nombre</label>
-                <input class="datosform" type="text">
+                <label class="datosform" for="nombre">Nombre</label>
+                <input class="datosform nombre" type="text">
                 <label class="datosform" for="correo">Correo</label>
-                <input class="datosform" type="email">
+                <input class="datosform correo" type="email">
                 <label class="datosform" for="asunto">Asunto o curso de interés</label>
-                <input class="datosform" type="text">
+                <input class="datosform text" type="text">
             </form>
         </div>
-        <div class="redes" >
-            <a href="https://www.facebook.com/profile.php?id=100082997299240" target="_blank">Facebook<img class="fb"
-                    src="../Imágenes/Facebook.png" alt="" target="_blank"></a>
-            <a href="https://www.instagram.com/hodiesea/" target="_blank">Instagram<img class="ig" src="../Imágenes/Instagram.png"
-                    alt="" target="_blank"></a>
-        </div>
-   </section>
+    </div>
 
     <footer class="footer">
         <img class="finallogo" src="../Imágenes/icono-1.png" alt="">
         <p>Creado por @Hodiesea Capacitación y @Alejandro Segura, todos los derechos reservados</p>
         <p>Jóvenes mejorando jóvenes</p>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+
 </body>
 
 </html>
